# openproject-mcp-server

./: .gitignore  .pre-commit-config.yaml  README.md  openproject-mcp.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/openproject_mcp/: __init__.py  client.py  config.py  errors.py  main.py  models.py  server.py
src/openproject_mcp/tools/: attachments.py  projects.py  queries.py  time_entries.py  users.py  wiki.py  work_packages.py
src/openproject_mcp/utils/: cursor.py  forms.py  logging.py
tests/: TESTING_CHECKLIST.md  conftest.py  test_attachments.py  test_cursor.py  test_errors.py  test_forms.py  test_projects.py  test_queries.py  test_stdio_smoke.py  test_time_entries.py  test_users.py  test_wiki.py  test_work_packages.py
tests/helpers/: __init__.py  assertions.py  mocks.py
