[project]
name = "openproject-mcp-server"
version = "0.0.1"
description = "OpenProject MCP server (stdio only)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "mcp>=1.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0"
]

[project.scripts]
openproj-mcp = "openproject_mcp.main:run"


