[project]
name = "openproject-mcp-server"
version = "0.0.1"
description = "OpenProject MCP server (stdio only)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "mcp>=1.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "coverage>=7.0.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.0",
]

[project.scripts]
openproj-mcp = "openproject_mcp.main:run"

[tool.ruff]
exclude = [
  "openproject-mcp.py",
  "openprojvenv",
  "__pycache__"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

